<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipomenu"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewTipoMenu"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <!--<TextView
            android:id="@+id/viewCodTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cod_tipomenu"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCodTipomenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewCodTipoMenu"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />-->

        <TextView
            android:id="@+id/viewDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalle"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewDetalle"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/viewPreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preparacion"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtPreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewPreparacion"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/viewCompras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compras"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCompras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewCompras"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="14sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>