<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipomenu"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/TipoMenu"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <!--<TextView
            android:id="@+id/viewCodTipoMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cod_tipomenu"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCodTipomenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewCodTipoMenu"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->

        <TextView
            android:id="@+id/viewDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalle"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewDetalle"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/viewPreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preparacion"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtPreparacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewPreparacion"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/viewCompras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compras"
            android:textColor="@color/teal_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtCompras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:labelFor="@+id/viewCompras"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_editar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_edit"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>